feat: fixed typo

--- a/templates/widget_forms/community/boundary_widget.html
+++ b/templates/widget_forms/community/boundary_widget.html
@@ -58,7 +58,7 @@
 </div>
 <div id="deleted-boundaries" style="display:none"></div>
 <button id="add-new-boundary" onclick="addNewBoundary(); event.preventDefault()">Add New Boundary</button>
-<button id="upload-shape-file-data" onclick="event.preventDefault()">Upload Shape File Date</button>
+<button id="upload-shape-file-data" onclick="event.preventDefault()">Upload Shape File Data</button>
 <script>
 function markAsDeleted() {
   const id = event.target.dataset.for
