--- a/templates/widget_forms/community/boundary_widget.html
+++ b/templates/widget_forms/community/boundary_widget.html
@@ -49,7 +49,7 @@
         <div class="boundary-container">
             <label for="boundary{{boundary_id}}">Boundary Id {{ boundary_id }}</label>
             <textarea
-                    class="boundary-textarea" name="boundary{{boundary_id}}" rows="4"
+                    class="boundary-textarea" name="current-boundary:{{boundary_id}}" rows="4"
                     cols="50">{{ boundary |join:", " }}</textarea>
             <button class="delete-boundary" data-for="{{boundary_id}}" onclick="markAsDeleted(); event.preventDefault()">
                 Mark For Deletion
@@ -70,6 +70,8 @@
         accept=".zip"
 >
 <script>
+var newBoundaryCount = 0
+
 function triggerShapeFileInput() {
    document.getElementById('shapefile-input').click()
 }
@@ -122,7 +124,7 @@ function markAsDeleted() {
     const deletedBoundariesContainer = document.getElementById('deleted-boundaries')
     deletedBoundariesContainer.insertAdjacentHTML(
       'beforeend',
-      `<input type="text" data-deleted="${selectorKey}" name="data-deleted:${selectorKey}">`
+      `<input type="text" data-deleted="${selectorKey}" name="deleted-boundary:${id}">`
     )
   }
   // -----------toggle deletion marker
@@ -130,16 +132,18 @@ function markAsDeleted() {
 }
 
 function removeBoundary(){
+  newBoundaryCount--
   event.target.closest(".boundary-container").remove()
 }
 function addNewBoundary(data='') {
+    newBoundaryCount++
     const boundaryContainer = document.getElementById('boundaries-container')
     boundaryContainer.insertAdjacentHTML(
       'beforeend',
       `<div class="boundary-container">
             <label>New Boundary</label>
             <textarea
-                name="new-boundary"
+                name="new-boundary:${newBoundaryCount}"
                 class="boundary-textarea" rows="4"
                 cols="50">${data}</textarea>
             <button class="delete-boundary" onclick="removeBoundary();event.preventDefault()">
