feat: admin form saves data from shape file

--- a/templates/widget_forms/community/boundary_widget.html
+++ b/templates/widget_forms/community/boundary_widget.html
@@ -17,6 +17,7 @@
         font-weight: bold;
         cursor: pointer;
         width: 140px;
+        height: 90px;
     }
     .delete-boundary:hover{
         background: darkgrey;
