--- a/templates/communities/customize-label.html
+++ b/templates/communities/customize-label.html
@@ -20,7 +20,7 @@
         <div class="flex-this margin-left-16 margin-right-16">
 
             <div id="target-img-div" class="margin-top-16">
-                <img 
+                <img class="pointer-event-none"
                     loading="lazy"
                     {% if label_code == 'bcr' %}
                         id="bcr" 
