--- a/templates/partials/infocards/_researcher-card.html
+++ b/templates/partials/infocards/_researcher-card.html
@@ -34,7 +34,7 @@
                     </div>
                     {% if researcher.otc_researcher_url.all %}
                         <div class="flex-this flex-end">
-                            <img src="{% static 'images/notices/ci-open-to-collaborate.png' %}" width="60px">
+                            <img class="pointer-event-none" src="{% static 'images/notices/ci-open-to-collaborate.png' %}" width="60px">
                         </div>
                     {% endif %}
                 {% endif %}
