--- a/localcontexts/static/css/main.css
+++ b/localcontexts/static/css/main.css
@@ -176,6 +176,11 @@ input:focus {
     box-shadow: 0px 0px 1px 0.5px #007385;
 }
 
+/* POINTEREVENT */
+.pointer-event-none{
+    pointer-events: none;
+}
+
 /* OPACITY */
 .opacity-4 { opacity: 0.4;}
 
