--- a/templates/bclabels/mini-labels.html
+++ b/templates/bclabels/mini-labels.html
@@ -3,7 +3,7 @@
 <div>
     <img 
         loading="lazy" 
-        class="img-sizedown-small {% if not bclabel.is_approved %}opacity-4{% endif %}"
+        class="img-sizedown-small {% if not bclabel.is_approved %}opacity-4{% endif %} pointer-event-none"
         
         {% if bclabel.label_type == 'commercialization'%}
             src="{% static 'images/bc-labels/bc-open-to-commercialization.png' %}" 
