--- a/templates/partials/_notices.html
+++ b/templates/partials/_notices.html
@@ -43,7 +43,7 @@
         </div>
     </div>
     <div class="flex-this">
-        <div><img loading="lazy" src="{% static 'images/notices/ci-open-to-collaborate.png' %}" width="119px" alt="black square with a rectangle and on hand on top and bottom in the middle in white"></div>
+        <div><img loading="lazy" class="pointer-event-none" src="{% static 'images/notices/ci-open-to-collaborate.png' %}" width="119px" alt="black square with a rectangle and on hand on top and bottom in the middle in white"></div>
         <div class="flex-this column margin-left-16">
             <div class="w-90">
                 <h3 class="no-top-margin">Open to Collaborate</h3>
@@ -135,16 +135,16 @@
 
     <div class="flex-this justify-center">
         <div id="disclosureTK" class="cc-notice__container" onclick="expandDisclosureNotice(this)">
-            <div><img loading="lazy" src="{% static 'images/notices/tk-notice.png' %}" width="119px" alt="black square with the letters TK in the middle in white"></div>
+            <div><img loading="lazy" class="pointer-event-none" src="{% static 'images/notices/tk-notice.png' %}" width="119px" alt="black square with the letters TK in the middle in white"></div>
             <div><p>Traditional Knowledge</p></div>
         </div>
         <div id="disclosureBC" class="cc-notice__container" onclick="expandDisclosureNotice(this)">
-            <div><img loading="lazy" src="{% static 'images/notices/bc-notice.png' %}" width="119px" alt="black square with the letters BC in the middle in white"></div>
+            <div><img loading="lazy" class="pointer-event-none" src="{% static 'images/notices/bc-notice.png' %}" width="119px" alt="black square with the letters BC in the middle in white"></div>
             <div><p>Biocultural</p></div>
         </div>
         
         <div id="disclosureAI" class="cc-notice__container" onclick="expandDisclosureNotice(this)">
-            <div><img loading="lazy" src="{% static 'images/notices/ci-attribution-incomplete.png' %}" width="119px" alt="black square with an unfinished square in the middle in white"></div>
+            <div><img loading="lazy" class="pointer-event-none" src="{% static 'images/notices/ci-attribution-incomplete.png' %}" width="119px" alt="black square with an unfinished square in the middle in white"></div>
             <div><p>Attribution Incomplete</p></div>
         </div>
     </div>
@@ -153,7 +153,7 @@
 
         <div id="openDiv-disclosureTK" class="disclosure-notice__expanded-container hide">
             <div class="flex-this">
-                <div><img loading="lazy" src="{% static 'images/notices/tk-notice.png' %}" alt="black square with the letters TK in the middle in white"></div>
+                <div><img loading="lazy" class="pointer-event-none" src="{% static 'images/notices/tk-notice.png' %}" alt="black square with the letters TK in the middle in white"></div>
                 <div class="flex-this column margin-left-16">
                     <div class="w-90">
                         <h2 class="no-top-margin">Traditional Knowledge Notice</h2>
@@ -175,7 +175,7 @@
 
         <div id="openDiv-disclosureBC" class="disclosure-notice__expanded-container hide">
             <div class="flex-this">
-                <div><img loading="lazy" src="{% static 'images/notices/bc-notice.png' %}" alt="black square with the letters BC in the middle in white"></div>
+                <div><img loading="lazy" class="pointer-event-none" src="{% static 'images/notices/bc-notice.png' %}" alt="black square with the letters BC in the middle in white"></div>
                 <div class="flex-this column margin-left-16">
                     <div class="w-90">
                         <h2 class="no-top-margin">Biocultural Notice</h2>
@@ -197,7 +197,7 @@
 
         <div id="openDiv-disclosureAI" class="disclosure-notice__expanded-container hide">
             <div class="flex-this">
-                <div><img loading="lazy" src="{% static 'images/notices/ci-attribution-incomplete.png' %}" width="119px" alt="black square with an unfinished square in the middle in white"></div>
+                <div><img loading="lazy" class="pointer-event-none" src="{% static 'images/notices/ci-attribution-incomplete.png' %}" width="119px" alt="black square with an unfinished square in the middle in white"></div>
                 <div class="flex-this column margin-left-16">
                     <div class="w-90">
                         <h2 class="no-top-margin">Attribution Incomplete Notice</h2>
@@ -254,7 +254,7 @@
             </div>
         </div>
         <div class="flex-this">
-            <div><img loading="lazy" src="{% static 'images/notices/collections-care/cc-overall-notice.png' %}" width="119px" alt=""></div>
+            <div><img loading="lazy" class="pointer-event-none" src="{% static 'images/notices/collections-care/cc-overall-notice.png' %}" width="119px" alt=""></div>
             <div class="flex-this column margin-left-16">
                 <div class="w-80">
                     <p>
@@ -280,45 +280,45 @@
 
                     <div class="flex-this space-between">
                         <div id="authorization" class="cc-notice__container" onclick="expandCCNotice(this)">
-                            <div><img loading="lazy" src="{% static 'images/notices/collections-care/cc-authorization.png' %}" width="119px" alt="Icon for Authorization Notice. Abstract design within a white square. Black circle above a set of three curved black lines with one curved black line below."></div>
+                            <div><img loading="lazy" class="pointer-event-none" src="{% static 'images/notices/collections-care/cc-authorization.png' %}" width="119px" alt="Icon for Authorization Notice. Abstract design within a white square. Black circle above a set of three curved black lines with one curved black line below."></div>
                             <div><p>Authorization</p></div>
                         </div>
                         <div id="belonging" class="cc-notice__container" onclick="expandCCNotice(this)">
-                            <div><img loading="lazy" src="{% static 'images/notices/collections-care/cc-belonging.png' %}" width="119px" alt="Icon for Belonging Notice. Abstract design within a white square. Three layered sets of black circles with two curved black lines representing three people."></div>
+                            <div><img loading="lazy" class="pointer-event-none" src="{% static 'images/notices/collections-care/cc-belonging.png' %}" width="119px" alt="Icon for Belonging Notice. Abstract design within a white square. Three layered sets of black circles with two curved black lines representing three people."></div>
                             <div><p>Belonging</p></div>
                         </div>
                         
                         <div id="caring" class="cc-notice__container" onclick="expandCCNotice(this)">
-                            <div><img loading="lazy" src="{% static 'images/notices/collections-care/cc-caring.png' %}" width="119px" alt="Icon for Caring Notice. Abstract design within a white square. Two curved black lines surround a black circle."></div>
+                            <div><img loading="lazy" class="pointer-event-none" src="{% static 'images/notices/collections-care/cc-caring.png' %}" width="119px" alt="Icon for Caring Notice. Abstract design within a white square. Two curved black lines surround a black circle."></div>
                             <div><p>Caring</p></div>
                         </div>
                     
                         <div id="gender-aware" class="cc-notice__container" onclick="expandCCNotice(this)">
-                            <div><img loading="lazy" src="{% static 'images/notices/collections-care/cc-gender-aware.png' %}" width="119px" alt="Icon for Gender Aware Notice. Abstract design within a white square. Three circles in a diagonal line: A black outlined circle, a black filled circle, and a striped black and white circle."></div>
+                            <div><img loading="lazy" class="pointer-event-none" src="{% static 'images/notices/collections-care/cc-gender-aware.png' %}" width="119px" alt="Icon for Gender Aware Notice. Abstract design within a white square. Three circles in a diagonal line: A black outlined circle, a black filled circle, and a striped black and white circle."></div>
                             <div><p>Gender Aware</p></div>
                         </div>
                     </div>
                     <div class="flex-this space-between">
                         <div id="leave-undisturbed" class="cc-notice__container" onclick="expandCCNotice(this)">
-                            <div><img loading="lazy" src="{% static 'images/notices/collections-care/cc-leave-undisturbed.png' %}" width="119px" alt="Icon for Leave Undisturbed Notice. Abstract design within a white square. A black circle in the center of two curved black lines which form a struck-through circle."></div>
+                            <div><img loading="lazy" class="pointer-event-none" src="{% static 'images/notices/collections-care/cc-leave-undisturbed.png' %}" width="119px" alt="Icon for Leave Undisturbed Notice. Abstract design within a white square. A black circle in the center of two curved black lines which form a struck-through circle."></div>
                             <div><p>Leave Undisturbed</p></div>
                         </div>
                         <div id="safety" class="cc-notice__container" onclick="expandCCNotice(this)">
-                            <div><img loading="lazy" src="{% static 'images/notices/collections-care/cc-safety.png' %}" width="119px" alt="Icon for Safety Notice. Abstract design within a white square. A black circle in the center of three curved black lines which form a circle."></div>
+                            <div><img loading="lazy" class="pointer-event-none" src="{% static 'images/notices/collections-care/cc-safety.png' %}" width="119px" alt="Icon for Safety Notice. Abstract design within a white square. A black circle in the center of three curved black lines which form a circle."></div>
                             <div><p>Safety</p></div>
                         </div>
                         <div id="viewing" class="cc-notice__container" onclick="expandCCNotice(this)">
-                            <div><img loading="lazy" src="{% static 'images/notices/collections-care/cc-viewing.png' %}" width="119px" alt="Icon for Viewing Notice. Abstract design within a white square. A black circle in the center of two curved lines, forming an abstract eye."></div>
+                            <div><img loading="lazy" class="pointer-event-none" src="{% static 'images/notices/collections-care/cc-viewing.png' %}" width="119px" alt="Icon for Viewing Notice. Abstract design within a white square. A black circle in the center of two curved lines, forming an abstract eye."></div>
                             <div><p>Viewing</p></div>
                         </div>
                         <div id="withholding" class="cc-notice__container" onclick="expandCCNotice(this)">
-                            <div><img loading="lazy" src="{% static 'images/notices/collections-care/cc-withholding.png' %}" width="119px" alt="Icon for Withholding Notice. Abstract design within a white square. A black circle in the center of two curved lines."></div>
+                            <div><img loading="lazy" class="pointer-event-none" src="{% static 'images/notices/collections-care/cc-withholding.png' %}" width="119px" alt="Icon for Withholding Notice. Abstract design within a white square. A black circle in the center of two curved lines."></div>
                             <div><p>Withholding</p></div>
                         </div>
                     </div>
 
                     <div id="openDiv-authorization" class="flex-this cc-notice__expanded-container hide">
-                        <div class="cc-notice__expanded-img"><img loading="lazy" src="{% static 'images/notices/collections-care/cc-authorization.png' %}" width="119px" alt="Icon for Authorization Notice. Abstract design within a white square. Black circle above a set of three curved black lines with one curved black line below."></div>
+                        <div class="cc-notice__expanded-img"><img loading="lazy" class="pointer-event-none" src="{% static 'images/notices/collections-care/cc-authorization.png' %}" width="119px" alt="Icon for Authorization Notice. Abstract design within a white square. Black circle above a set of three curved black lines with one curved black line below."></div>
                         <div class="cc-notice__expanded-text">
                             <div><h2 class="no-top-margin">Authorization</h2></div>
 
@@ -334,7 +334,7 @@
                     </div>
 
                     <div id="openDiv-belonging" class="flex-this cc-notice__expanded-container hide">
-                        <div class="cc-notice__expanded-img"><img loading="lazy" src="{% static 'images/notices/collections-care/cc-belonging.png' %}" width="119px" alt="Icon for Belonging Notice. Abstract design within a white square. Three layered sets of black circles with two curved black lines representing three people."></div>
+                        <div class="cc-notice__expanded-img"><img loading="lazy" class="pointer-event-none" src="{% static 'images/notices/collections-care/cc-belonging.png' %}" width="119px" alt="Icon for Belonging Notice. Abstract design within a white square. Three layered sets of black circles with two curved black lines representing three people."></div>
                         <div class="cc-notice__expanded-text">
                             <div><h2 class="no-top-margin">Belonging</h2></div>
 
@@ -349,7 +349,7 @@
                     </div>
 
                     <div id="openDiv-caring" class="flex-this cc-notice__expanded-container hide">
-                        <div class="cc-notice__expanded-img"><img loading="lazy" src="{% static 'images/notices/collections-care/cc-caring.png' %}" width="119px" alt="Icon for Caring Notice. Abstract design within a white square. Two curved black lines surround a black circle."></div>
+                        <div class="cc-notice__expanded-img"><img loading="lazy" class="pointer-event-none" src="{% static 'images/notices/collections-care/cc-caring.png' %}" width="119px" alt="Icon for Caring Notice. Abstract design within a white square. Two curved black lines surround a black circle."></div>
                         <div class="cc-notice__expanded-text">
                             <div><h2 class="no-top-margin">Caring</h2></div>
 
@@ -364,7 +364,7 @@
                     </div>
 
                     <div id="openDiv-gender-aware" class="flex-this cc-notice__expanded-container hide">
-                        <div class="cc-notice__expanded-img"><img loading="lazy" src="{% static 'images/notices/collections-care/cc-gender-aware.png' %}" width="119px" alt="Icon for Gender Aware Notice. Abstract design within a white square. Three circles in a diagonal line: A black outlined circle, a black filled circle, and a striped black and white circle."></div>
+                        <div class="cc-notice__expanded-img"><img loading="lazy" class="pointer-event-none" src="{% static 'images/notices/collections-care/cc-gender-aware.png' %}" width="119px" alt="Icon for Gender Aware Notice. Abstract design within a white square. Three circles in a diagonal line: A black outlined circle, a black filled circle, and a striped black and white circle."></div>
                         <div class="cc-notice__expanded-text">
                             <div><h2 class="no-top-margin">Gender Aware</h2></div>
 
@@ -379,7 +379,7 @@
                     </div>
 
                     <div id="openDiv-leave-undisturbed" class="flex-this cc-notice__expanded-container hide">
-                        <div class="cc-notice__expanded-img"><img loading="lazy" src="{% static 'images/notices/collections-care/cc-leave-undisturbed.png' %}" width="119px" alt="Icon for Leave Undisturbed Notice. Abstract design within a white square. A black circle in the center of two curved black lines which form a struck-through circle."></div>
+                        <div class="cc-notice__expanded-img"><img loading="lazy" class="pointer-event-none" src="{% static 'images/notices/collections-care/cc-leave-undisturbed.png' %}" width="119px" alt="Icon for Leave Undisturbed Notice. Abstract design within a white square. A black circle in the center of two curved black lines which form a struck-through circle."></div>
                         <div class="cc-notice__expanded-text">
                             <div><h2 class="no-top-margin">Leave Undisturbed</h2></div>
 
@@ -394,7 +394,7 @@
                     </div>
 
                     <div id="openDiv-safety" class="flex-this cc-notice__expanded-container hide">
-                        <div class="cc-notice__expanded-img"><img loading="lazy" src="{% static 'images/notices/collections-care/cc-safety.png' %}" width="119px" alt="Icon for Safety Notice. Abstract design within a white square. A black circle in the center of three curved black lines which form a circle."></div>
+                        <div class="cc-notice__expanded-img"><img loading="lazy" class="pointer-event-none" src="{% static 'images/notices/collections-care/cc-safety.png' %}" width="119px" alt="Icon for Safety Notice. Abstract design within a white square. A black circle in the center of three curved black lines which form a circle."></div>
                         <div class="cc-notice__expanded-text">
                             <div><h2 class="no-top-margin">Safety</h2></div>
 
@@ -409,7 +409,7 @@
                     </div>
 
                     <div id="openDiv-viewing" class="flex-this cc-notice__expanded-container hide">
-                        <div class="cc-notice__expanded-img"><img loading="lazy" src="{% static 'images/notices/collections-care/cc-viewing.png' %}" width="119px" alt="Icon for Viewing Notice. Abstract design within a white square. A black circle in the center of two curved lines, forming an abstract eye."></div>
+                        <div class="cc-notice__expanded-img"><img loading="lazy" class="pointer-event-none" src="{% static 'images/notices/collections-care/cc-viewing.png' %}" width="119px" alt="Icon for Viewing Notice. Abstract design within a white square. A black circle in the center of two curved lines, forming an abstract eye."></div>
                         <div class="cc-notice__expanded-text">
                             <div><h2 class="no-top-margin">Viewing</h2></div>
 
@@ -425,7 +425,7 @@
                     </div>
 
                     <div id="openDiv-withholding" class="flex-this cc-notice__expanded-container hide">
-                        <div class="cc-notice__expanded-img"><img loading="lazy" src="{% static 'images/notices/collections-care/cc-withholding.png' %}" width="119px" alt="Icon for Withholding Notice. Abstract design within a white square. A black circle in the center of two curved lines."></div>
+                        <div class="cc-notice__expanded-img"><img loading="lazy" class="pointer-event-none" src="{% static 'images/notices/collections-care/cc-withholding.png' %}" width="119px" alt="Icon for Withholding Notice. Abstract design within a white square. A black circle in the center of two curved lines."></div>
                         <div class="cc-notice__expanded-text">
                             <div><h2 class="no-top-margin">Withholding</h2></div>
 
