--- a/templates/partials/_project-actions.html
+++ b/templates/partials/_project-actions.html
@@ -264,7 +264,7 @@
                             </div>
                             <div>
                                 <div class="margin-top-16">
-                                    <img loading="lazy" src="{{ notice.img_url }}" width="78" height="78" alt="black square with white letters TK in the middle">
+                                    <img class="pointer-event-none" loading="lazy" src="{{ notice.img_url }}" width="78" height="78" alt="black square with white letters TK in the middle">
                                 </div>
                                 <p>
                                     {{ notice.default_text }} <br><br>
