--- a/templates/tklabels/which-label.html
+++ b/templates/tklabels/which-label.html
@@ -4,7 +4,7 @@
 <div>
     <img
         loading="lazy"
-        class="label-medium {% if not tklabel.is_approved %}opacity-4{% endif %}"
+        class="label-medium {% if not tklabel.is_approved %}opacity-4{% endif %} pointer-event-none"
 
         {% if tklabel.label_type == 'attribution' %} 
             src="{% static 'images/tk-labels/tk-attribution.png' %}" 
