--- a/templates/communities/customize-label.html
+++ b/templates/communities/customize-label.html
@@ -232,8 +232,7 @@
                         <label class='block'>Label Language <small>(select from dropdown)</small></label>
                         <div class="tooltip" style="margin-top: 5px; margin-left: 5px;"><strong>i</strong>
                             <span class="tooltiptext">
-                                Can't find the language you are looking for?<br>
-                                Contact us at support@localcontexts.org
+                                Select the language for this Label. English,<br> Māori, French, and Spanish translations <br>of the Label name and template text will be <br>loaded if selected. Can't find the language <br>you are looking for? <br> Please contact us: support@localcontexts.org
                             </span>
                         </div>                          
                     </div>
@@ -257,6 +256,7 @@
                             <a href="https://localcontexts.org/privacy-policy/" class="white-text underline-hover" target="_blank" rel="noopener">Privacy Policy <i class="fa-solid fa-arrow-up-right-from-square fa-xs"></i></a>.
                         </span>
                     </div> 
+                    <div id="languageError" class="msg-red w-50 font-size-14" style="display:none;"></div>
                     {{ form.label_text }}
                 </div>
 
