embed test JS to HTML changes

--- a/templates/projects/embed-project.html
+++ b/templates/projects/embed-project.html
@@ -2,13 +2,36 @@
 <html>
     <head>
         <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
-
         <link rel="stylesheet" type="text/css" href="/static/css/main.css">
+        <script src="/static/javascript/main.js" defer></script>
+        {{ project.unique_id|json_script:"embed-project-id" }}
     </head>
 
     <body>
         <!-- Icons w/o title -->
-        {% if not layout or layout == "1" %}
+        <div id="img-only" class="flex-this flex-start wrap w-100 margin-top-1">
+            <div id="notice-img" class="margin-left-1 margin-right-1">
+                <img loading="lazy" class="margin-bottom-8 img-sizedown-small pointer" src="" alt="">
+            </div>
+            <!-- 
+            {% if project.has_bclabels or project.has_tklabels %}
+                {% for community, labels in label_groups.items %}
+                    {% for tklabel in labels.tk_labels %}
+                        <div class="margin-left-1 margin-right-1">
+                            <img loading="lazy" class="margin-bottom-8 img-sizedown-small pointer" src="{{ tklabel.img_url }}" alt="">
+                        </div>
+                    {% endfor %}
+                    {% for bclabel in labels.bc_labels %}
+                        <div class="margin-left-1 margin-right-1">
+                            <img loading="lazy" class="margin-bottom-8 img-sizedown-small pointer" src="{{ bclabel.img_url }}" alt="">
+                        </div>
+                    {% endfor %}
+                {% endfor %}
+            {% endif %} -->
+        </div>
+
+        <!-- Icons w/o title -->
+        <!-- {% if not layout or layout == "1" %}
             <div class="flex-this flex-start wrap w-100 margin-top-1">
                 {% if notices %}
                     {% for notice in notices %}
@@ -33,10 +56,10 @@
                     {% endfor %}
                 {% endif %}
             </div>
-        {% endif%}
+        {% endif%} -->
 
         <!-- Icons w/ title -->
-        {% if layout == "2" %}
+        <!-- {% if layout == "2" %}
             <div class="flex-this wrap w-100">
                 {% if notices %}
                     {% for notice in notices %}
@@ -129,10 +152,10 @@
                     {% endfor %}
                 {% endif %}
             </div>
-        {% endif%}
+        {% endif%} -->
 
         <!-- Full Text -->
-        {% if layout == "3" %}
+        <!-- {% if layout == "3" %}
             <div class="flex-this wrap w-100">
                 {% if notices %}
                     {% for notice in notices %}
@@ -237,12 +260,12 @@
                     {% endfor %}
                 {% endif %}
             </div>
-        {% endif %}
+        {% endif %} -->
 
         <div class="flex-this wrap w-100">
             <div class="flex-this ">
                 <div class="margin-left-8 margin-right-8 padding-bottom-1 pad-top-1"><a href="https://localcontexts.org"><img style="width:30px;" src="https://localcontexts.org/wp-content/uploads/2023/04/White-Background.png" alt="Local Contexts Icon"></a></div>
-                <div class="auto-margin font-size-14"><a class="darkteal-text underline-hover bold" href="{{project.project_page}}">{{project.project_page}}</a></div>
+                <div class="auto-margin font-size-14"><a id="project-link" class="darkteal-text underline-hover bold"></a></div>
             </div>
         </div>
     </body>
