--- a/templates/partials/footers/_auth-footer.html
+++ b/templates/partials/footers/_auth-footer.html
@@ -13,7 +13,7 @@
                         <a class="underline-hover" href="https://localcontexts.org/contact/"> Contact Us</a> | 
                         <a id="feedback-form" class="pointer underline-hover">Report an Issue</a> |
                         <a class="underline-hover" href="/api">API</a> |
-                        {% if 'localhost' in request.get_host or 'localcontextshub' in request.get_host %}
+                        {% if 'localhost' in request.get_host or 'localcontextshub' in request.get_host and 'sandbox' not in request.get_host %}
                             <a class="underline-hover" href="{% url 'newsletter-subscription' %}">Newsletter</a> |
                         {% endif %}
                         <a class="underline-hover" href="https://localcontexts.org/privacy-policy/" target="_blank" rel="noopener">Privacy Policy <i class="fa-solid fa-arrow-up-right-from-square fa-xs"></i></a> | 
