--- a/templates/communities/community-boundaries.html
+++ b/templates/communities/community-boundaries.html
@@ -105,7 +105,7 @@
         selector.addEventListener('click', () => {
             continueButton.classList.remove('disabled-btn')
             const nextUrl = event.target.dataset.next
-            $('#community-boundary-continue-btn').attr('href', nextUrl)
+            document.querySelector('#community-boundary-continue-btn').setAttribute('href', nextUrl)
         })
     })
     </script>
