--- a/templates/communities/customize-label.html
+++ b/templates/communities/customize-label.html
@@ -17,10 +17,10 @@
 <div class="content-card-v2 content-card-space">
     <h3 class="no-top-margin">Step 1. Select a Label to customize</h3>
     <div class="margin-bottom-16 margin-top-16 w-100 about-this-label">    
-        <div class="flex-this margin-left-16 margin-right-16">
+        <div class="flex-this margin-left-16 margin-right-16 pointer-event-none">
 
             <div id="target-img-div" class="margin-top-16">
-                <img 
+                <img
                     loading="lazy"
                     {% if label_code == 'bcr' %}
                         id="bcr" 
