--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -1,52 +1,87 @@
-{% extends 'register-base.html' %} {% load static %} {% block title %} Login {% endblock %}
+{% extends 'register-base.html' %} {% load static %} {% block title %} Login {%
+endblock %} {% load socialaccount %} {% block card %}
+<div class="flex-this space-between w-90">
+  <div>
+    <h2 class="margin-bottom-2">Welcome back!</h2>
+    <p>Please sign in to use the Local Contexts Hub</p>
+  </div>
+  <div>
+    <p>
+      Not signed up yet?
+      <a href="{% url 'register' %}" class="default-a">Register</a>
+    </p>
+  </div>
+</div>
 
-{% block card %}
-    <div class="flex-this space-between w-90">
-        <div>
-            <h2 class="margin-bottom-2">Welcome back!</h2>
-            <p>Please sign in to use the Local Contexts Hub</p>                    
-        </div>
-        <div><p>Not signed up yet? <a href="{% url 'register' %}" class="default-a">Register</a></p></div>                    
+<div class="form-container flex-this column w-90">
+  <form
+    action="{% url 'login' %}"
+    method="POST"
+    class="flex-this column w-100"
+    autocomplete="off"
+  >
+    {% csrf_token %}
+    <div>
+      <label>Username</label>
+      <div class="tooltip" style="margin-top: 15px; margin-left: 5px">
+        <strong>i</strong>
+        <span class="tooltiptext"
+          >Log-in with the username you created during the registration process,
+          not your email</span
+        >
+      </div>
+      <input type="username" name="username" required />
     </div>
-
-    <div class="form-container flex-this column w-90">
-
-        <form action="{% url 'login' %}" method="POST" class="flex-this column w-100" autocomplete="off">
-            {% csrf_token %}
-            <div>
-                <label>Username</label>
-                <div class="tooltip" style="margin-top: 15px; margin-left: 5px;"><strong>i</strong>
-                    <span class="tooltiptext">Log-in with the username you created during the registration process, not your email</span>
-                </div>
-                <input type="username" name="username" required>
-            </div>
-            <div class="pad-top-1-5">
-                <label>Password</label>
-                <input type="password" name="password" required>
-            </div>
-            <div class="flex-this space-between pad-top-1-5"> 
-                <div>
-                    <a href="{% url 'reset_password'%}" class="default-a">Forgot your password?</a>
-                </div>  
-                <div><button class="primary-btn action-btn margin-top-2 default-btn-width">Sign in</button></div>
-            </div>
-            <input type="hidden" name="next" value="{{ request.GET.next }}"/>
-        </form>
-
-        <!-- Alerts -->
-        {% include 'partials/_alerts.html' %}
-
-        {% if envi == 'PROD' or 'localhost' in request.get_host %}
-            <div class="flex-this w-100 test-hub-div">
-                <div class="w-70 margin-right-16">
-                    <p class="no-top-margin no-bottom-margin bold">First time using the Local Contexts Hub?</p>
-                    <small>We have a test site where you can practice and explore the Local Contexts Hub. Follow this button to go to the Hub test site.</small>
-                </div>
-                <div class="margin-left-16">
-                    <a class="primary-btn orange-btn block" href="https://sandbox.localcontextshub.org" target="_blank" rel="noopener">Let's go <i class="fa fa-arrow-right margin-left-8"></i></a></div>            
-            </div>
-        {% endif %}
-
+    <div class="pad-top-1-5">
+      <label>Password</label>
+      <input type="password" name="password" required />
     </div>
+    <div class="flex-this space-between pad-top-1-5">
+      <div>
+        <a href="{% url 'reset_password'%}" class="default-a"
+          >Forgot your password?</a
+        >
+      </div>
+      <div>
+        <button class="primary-btn action-btn margin-top-2 default-btn-width">
+          Sign in
+        </button>
+      </div>
+    </div>
+    <div class="flex-this flex-end margin-top-2">
+      <button class="primary-btn action-btn">
+        <a class="white-text" href="{% provider_login_url 'google' %}"
+          >Sign in With Google</a
+        >
+      </button>
+    </div>
+    <input type="hidden" name="next" value="{{ request.GET.next }}" />
+  </form>
+
+  <!-- Alerts -->
+  {% include 'partials/_alerts.html' %} {% if envi == 'PROD' or 'localhost' in
+  request.get_host %}
+  <div class="flex-this w-100 test-hub-div">
+    <div class="w-70 margin-right-16">
+      <p class="no-top-margin no-bottom-margin bold">
+        First time using the Local Contexts Hub?
+      </p>
+      <small
+        >We have a test site where you can practice and explore the Local
+        Contexts Hub. Follow this button to go to the Hub test site.</small
+      >
+    </div>
+    <div class="margin-left-16">
+      <a
+        class="primary-btn orange-btn block"
+        href="https://sandbox.localcontextshub.org"
+        target="_blank"
+        rel="noopener"
+        >Let's go <i class="fa fa-arrow-right margin-left-8"></i
+      ></a>
+    </div>
+  </div>
+  {% endif %}
+</div>
 
 {% endblock %}
