Hyper linked support email

--- a/templates/accounts/password-reset-sent.html
+++ b/templates/accounts/password-reset-sent.html
@@ -7,7 +7,7 @@
             If you don't receive an email, please make sure you entered the address you registered with 
             and check your spam folder.<br><br>
             <strong>Still having issues?</strong> <br>
-            Email us at support@localcontexts.org
+            Email us at <a href="mailto:support@localcontexts.org">support@localcontexts.org</a>
         </p>                               
     </div>
 {% endblock %}
