feat: the coordinates from native land are reordered in (lat, lon) format instead of (lon, lat)

--- a/templates/communities/add-community-boundaries.html
+++ b/templates/communities/add-community-boundaries.html
@@ -237,10 +237,14 @@
                 }
 
                 const boundary = boundaryData[0]
+                const boundaryCoordinates = boundary.geometry.coordinates[0]
+                // reorder so (lon, lat)'s become (lat, lon)'s
+                boundaryCoordinates.map(row=>row.reverse())
+
                 const payload = {
                     source: url,
                     name: boundary.properties.Name,
-                    boundaries: boundary.geometry.coordinates
+                    boundaries: [boundaryCoordinates]
                 }
 
                 // do post call to set boundaries in request
